k8s/kustomize/work/overlays/prod/patch-scaling-backapp.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backapp
  labels:
    homework: backapp
spec:
  replicas: 2
