k8s/kustomize/work/overlays/prod/patch-scaling-frontapp.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontapp
  labels:
    homework: frontapp
spec:
  replicas: 2
